--- a/index.html
+++ b/index.html
@@ -32,6 +32,14 @@
     <section id="biskvitim" class="tab-content active" role="tabpanel" tabindex="0">
       <article class="card">
         <h2>עוגת ביסקוויטים</h2>
+         <h3>מצרכים:</h3>
+        <ul>
+          <li>250 גרם שמנת מתוקה</li>
+          <li>חצי חבילה אינסטנט פודינג וניל</li>
+          <li>כפית נס קפה</li>
+          <li>חלב</li>
+          <li>לוטוס/שוקולד</li>
+        </ul>
         <ol>
           <li>מקציפים 250 גרם שמנת מתוקה עם חצי חבילת אינסטנט פודינג וניל וחצי כוס חלב עד להקצפה יציבה.</li>
           <li>מרטיבים כל עוגייה בחלב עם קצת נס קפה ומסדרים בתבנית.</li>
